This file documents the revision history for Perl extension WWW::BooksTracker.

0.01  Mon Jun  6 09:37:40 2005
        - initial revision, generated by Catalyst

* Implemented a book create/list/update/delete mechanism.
* Made sure disable a book reamins so after restarting the app.