@@ -1,58 +1,0 @@
-[% USE HTML %]
-[% INCLUDE 'book_header.tt' %]
-<h1>Online Books Tracker - Add New Book</h1>
-
-<div class="book_info edit">
-[% PERL %]
-my $book_meta = $stash->get('books_meta');
-my $book = $stash->get('book');
-require WWW::BooksTracker::WWW::Form;
-
-# Number of characters for the input tag or textarea to be as wide;
-my $input_length = 40;
-my $input_height = 10;
-
-my %fields = 
-(map 
-    { $_->{'name'} => 
-        { 
-            'type' => $_->{'type'}, 
-            'label' => $_->{'label'},
-            'extraAttributes' => 
-                (($_->{type} eq "text") ? 
-                    " size=\"$input_length\" " :
-                    ($_->{type} eq "textarea") ?
-                    " cols=\"$input_length\" rows=\"$input_height\"" :
-                    ""
-                ),
-
-        },
-    }
-    @$book_meta
-);
-$fields{'mode'} = 
-{ 
-    'label' => "mode", 
-    'defaultValue' => "do_add", 
-    'type' => "hidden",
-};    
-my $params =
-+{
-    map { $_->{'name'} => "", } @$book_meta,
-};
-
-my $form = 
-    WWW::BooksTracker::WWW::Form->new(
-        \%fields, 
-        $params, 
-        [ 'mode', map {$_->{'name'}} @$book_meta]
-    );
-
-print $form->get_form_HTML('action' => "./");
-
-[% END %]
-</div>
-
-</body>
-</html>
-
