@@ -5,3 +5,6 @@ This file documents the revision history for Perl extension WWW::BooksTracker.
 
 * Implemented a book create/list/update/delete mechanism.
 * Made sure disable a book reamins so after restarting the app.
+* Added an "Add" Link to the bottom of the List books.
+* Made sure only the books with status 0 are displayed.
+
